--- a/src/main/resources/templates/job.html
+++ b/src/main/resources/templates/job.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td colspan="2">
                             <div style="text-align: left;">
-                                <div style="font-size: 16px;">Hi Hary Pham,</div>
+                                <div style="font-size: 16px;">Hi <span  th:text="${name}"></span>,</div>
                                 <div style="font-size: 16px;">One of these jobs may be your next one. Find out today!
                                 </div>
                             </div>
@@ -39,42 +39,26 @@
                     <tr>
                         <td colspan="2">
                             <table>
-                                <tr>
+                          
+                                <tr th:each="job : ${jobs}">
                                     <td>
                                         <div style="font-size: 16px;">
                                             <a href="https://hoidanit.vn/" target="_blank"
-                                                style="text-decoration: none;">Web Developer
-                                                (PHP, JavaScript)</a>
+                                                style="text-decoration: none;"
+                                                th:text="${job.name}">
+                                            </a>
                                         </div>
-                                        <div style="font-size: 14px;">VINAKET CO.LTD</div>
-                                        <div style="font-size: 14px;">1,000 - 2,500 USD</div>
+                                        <div style="font-size: 14px;" th:text="${job.company.name}"></div>
+                                        <div style="font-size: 14px;">
+                                            <span th:text="${#numbers.formatDecimal(job.salary, 0, 'COMMA', 0, 'POINT')}"></span>
+                                            đ
+                                        </div>
                                         <div style="margin-top: 5px;">
                                             <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">Java</span>
-                                            <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">Spring</span>
-                                            <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">English</span>
-                                        </div>
-                                        <div style="margin: 15px 0; border-top: 1px dashed rgba(5, 5, 5, 0.06);"></div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div style="font-size: 16px;">
-                                            <a href="https://hoidanit.vn/" target="_blank"
-                                                style="text-decoration: none;">Web Developer
-                                                (PHP, JavaScript)</a>
-                                        </div>
-                                        <div style="font-size: 14px;">VINAKET CO.LTD</div>
-                                        <div style="font-size: 14px;">1,000 - 2,500 USD</div>
-                                        <div style="margin-top: 5px;">
-                                            <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">PHP</span>
-                                            <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">JavaScript</span>
-                                            <span
-                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;">English</span>
+                                                style="font-size: 14px; background: #e8e8e8; padding: 3px; margin-right: 5px;  border-radius: 3px;"
+                                                th:each="skill :${job.skills}"
+                                                th:text="${skill.name}"></span>
+                                         
                                         </div>
                                         <div style="margin: 15px 0; border-top: 1px dashed rgba(5, 5, 5, 0.06);"></div>
                                     </td>
